# fn

./: .gitignore  .gitlab-ci.yml  Cargo.toml  flake.nix
bark/: Cargo.toml  bark.go  go.mod  go.sum
bark/src/: main.rs
meow/: Cargo.toml
meow/src/: bip39.rs  main.rs
quark/: go.mod  go.sum  quark.go
serve/: serve.go
sirius/: go.mod  go.sum  sirius.go
sirius/agent/: agent.go
sirius/bridge/: bridge.go  daemon.go  vsock.go
woff/: go.mod  go.sum  woff.go
