[package]
name = "meow"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true
strip = true

[dependencies]
rand = "0.8.4"
lazy_static = "1.4.0"
actix-web = "4.0.0-beta.20"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
futures = "0.3.19"
tokio = "1.15.0"
tokio-stream = "0.1.8"
anyhow = "1.0.52"
url = "2.2.2"
