[package]
name = "meow"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true

[dependencies]
axum = "0.6.0-rc.2"
tower-http = { version = "0.3.4", features = [ "fs", "limit" ] }
rand = "0.8"
futures = "*"
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.7.4", features = [ "compat" ] }
url = "2"
argh = "0.1"
lazy_static = "1.4"
